syntax = "proto3";

// https://cloud.google.com/apis/design/naming_convention

import "proto/v1/gomlet/gomlet-common.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

package proto.gomlet;

option go_package = "github.com/goml/gomlet/proto/v1/gomlet";

service Gomlet {
    // 실행중인 컨테이너를 조회합니다.
    rpc GetContainers(GetContainersRequest) returns (GetContainersResponse) {
    }

    // 컨테이너를 시작합니다.
    rpc StartContainer(StartContainerRequest) returns (google.protobuf.Empty) {
    }

    // 컨테이너를 중지합니다.
    rpc StopContainer(StopContainerRequest) returns (google.protobuf.Empty) {
    }

    // 컨테이너를 삭제합니다.
    rpc DeleteContainer(DeleteContainerRequest) returns (google.protobuf.Empty) {
    }

    // Node 정보를 조회합니다.
    rpc GetNode(GetNodeRequest) returns (GetNodeResponse) {
    }

    // 컨테이너를 생성합니다.
    rpc CreateContainer(CreateContainerRequest) returns (CreateContainerResponse) {
    }
}
